k8s/nginx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-service
  template:
    metadata:
      labels:
        run: nginx-service
    spec:
      containers:
      - image: nginx
        name: nginx
