k8s/myproject.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mp-deployment
  namespace: my-project
  labels:
    app: mp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mp
  template:
    metadata:
      labels:
        app: mp
    spec:
      containers:
      - name: mp
        image: ghcr.io/ifigenia8/my-project:master
        imagePullPolicy: Always
        ports:
        - containerPort: 1337
      imagePullSecrets:
        - name: git-secret


---

apiVersion: v1
kind: Service
metadata:
  name: mp-service
  namespace: my-project
spec:
  #to make it an external service
  #type: NodePort
  selector:
    app: mp
  ports:
    - port: 1337
