k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: my-project
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mysql:5.7
        ports:
          - containerPort: 3306
        #how to pass env var to the app from the image
        volumeMounts:
          - name: my-project-pvc
            mountPath: /var/lib/mysql2
      volumes:
          - name: my-project-pvc
            persistentVolumeClaim:
              claimName: my-project-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: my-project
  labels: 
    app: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
